src/objects/Guardia__c.object
<CustomObject>
    <fields>
        <fullName>GUA_CAS_Tratada_Fin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tratada Fin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUA_CAS_Tratada_Inicio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tratada Inicio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUA_DAT_Fecha_Fin__c</fullName>
        <label>Fecha Fin</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUA_DAT_Fecha_Inicio__c</fullName>
        <label>Fecha Inicio</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUA_LKP_Profesional__c</fullName>
        <label>Profesional</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Guardias</relationshipLabel>
        <relationshipName>Guardias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GUA_LKP_Territorio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territorio</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Guardias</relationshipLabel>
        <relationshipName>Guardias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Guardia</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GUA_DAT_Fecha_Inicio__c</columns>
        <columns>GUA_DAT_Fecha_Fin__c</columns>
        <columns>GUA_LKP_Profesional__c</columns>
        <columns>GUA_LKP_Territorio__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>G-{000000}</displayFormat>
        <label>Guardias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guardias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>